packages/svelte/tests/validator/samples/if-block-whitespace-legacy/input.svelte
<svelte:options runes={false} />

<!-- prettier-ignore -->
<div>
	{ #if true}
		<p>hi</p>
	{/if}
</div>
